<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="98"
        android:title="@string/action_clear_history"
        android:icon="@drawable/ic_action_clear_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_language"
        android:orderInCategory="99"
        android:title="@string/action_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="101"
        android:title="@string/action_aboutus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="102"
        android:title="@string/action_search"
        android:titleCondensed="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>
