<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_job_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mmitjobs.mmitjobs.JobDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_marginBottom="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_job_title"
                    android:paddingTop="5dp"
                    android:paddingLeft="15dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/text_job_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:id="@+id/relative_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_job_title">

                    <TextView
                        android:id="@+id/text_job_company_name"
                        android:text="@string/text_job_company_name"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:paddingTop="10dp"
                        android:paddingLeft="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/text_job_experience"
                        android:text="@string/text_job_experience"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:paddingTop="13dp"
                        android:paddingLeft="15dp"
                        android:layout_width="wrap_content"
                        android:layout_below="@+id/text_job_company_name"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/text_job_location"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:text="@string/text_job_location"
                        android:paddingTop="13dp"
                        android:paddingLeft="15dp"
                        android:layout_width="wrap_content"
                        android:layout_below="@+id/text_job_experience"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/img_card"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/text_job_title"
                    fresco:roundingBorderWidth="1dp"
                    fresco:roundedCornerRadius="10dp"
                    fresco:roundingBorderColor="@color/black"
                    android:layout_marginRight="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:transitionName="@string/transition_company_image"
                    fresco:placeholderImage="@mipmap/ic_launcher" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/responsibilities"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:text="@string/Responsibilities"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/responsibilities_text"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/responsibilities"
                    android:text="@string/responsibilities_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/requirements"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginTop="10dp"
                    android:text="@string/requirements"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/responsibilities_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/requirements_text"
                    android:text="@string/responsibilities_text"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/requirements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/message_to_candidate"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/requirements_text"
                    android:text="@string/message_to_candidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/phones"
                    android:text="@string/phones"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/message_to_candidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#BBBBBB"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp" />
        <RelativeLayout
            android:id="@+id/view_middle_bar"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="#BBBBBB" />

        <Button
            android:id="@+id/button_save_job"
            android:text="@string/save_this_job"
            android:layout_toLeftOf="@id/view_middle_bar"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/button_apply_now"
            android:text="@string/apply_now"
            android:layout_toRightOf="@id/view_middle_bar"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/AppTheme.Button"/>
    </RelativeLayout>

</RelativeLayout>
